--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./Develop/assets/css/style.css">
     <title>Horiseon Homepage</title>
 </head>
 
@@ -30,10 +30,10 @@
     </header>
     <!--Hero-->
     <section class="hero"></section>
-    <div class="content">
+    <main class="content">
         <!--Search Engine Optimization section-->
         <article id="search-engine-optimization" class="main-content">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="" />
+            <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" alt="" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -41,7 +41,7 @@
         </article>
         <!--Online Reputation Management section-->
         <article id="online-reputation-management" class="main-content">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="" />
+            <img src="./Develop/assets/images/online-reputation-management.jpg" class="float-right" alt="" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -49,32 +49,32 @@
         </article>
         <!--Social Media Marketing section-->
         <article id="social-media-marketing" class="main-content">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt=""/>
+            <img src="./Develop/assets/images/social-media-marketing.jpg" class="float-left" alt=""/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
-    </div>
+    </main>
     <!--Benefits section-->
     <div class="benefits">
         <article class="secondary-content">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt=""/>
+            <img src="./Develop/assets/images/lead-generation.png" alt=""/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
         <article class="secondary-content">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt=""/>
+            <img src="./Develop/assets/images/brand-awareness.png" alt=""/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
         <article class="secondary-content">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt=""></img>
+            <img src="./Develop/assets/images/cost-management.png" alt=""></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
